--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,207 @@
 /* Styles for the Advanced Markup assignment. */
+
+h1,h2,h3,h4,h5,h6 {
+  font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-seri;
+}
+
+body {
+  font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-seri;
+  background-image: url('marbet.jpg');
+  background-size: cover; */
+/*   background-repeat: no-repeat; */
+}
+
+.active {
+  font-weight: bold
+}
+
+section #bio-photo-content {
+/*   border-style: double; */
+/*   border-width: thick; */
+  margin-right: 300px;
+  margin-left: 7px;
+  padding-left: 10px;
+}
+
+section p {
+  font-weight: ;
+  line-height: 1.4;
+}
+
+img {
+  float: left;
+  margin; ;
+  padding: 2px;
+  margin-right: 25px;
+  border-style: double;
+  border-width: thick;
+}
+
+#sidebar {
+  float: right;
+  width: 400px;
+/*   background: pink; */
+  margin-left: 30px; /* margin is the space outside the box */
+  padding: 10px; /* padding is the space inside the box */
+  line-height: 1.4;
+  
+  /* or use absolute... */
+/*   position: absolute;  */
+            /* absolute positioned will make the div always stay there and move with the page. However, floating is used more often */ 
+/*   top: 10px; */
+/*   right: 35px; */
+/*   width: 250px; */
+}
+
+#sidebar-2 {
+  float: right;
+  widht: 400px;
+  margin-left: 50px;
+  padding: 6px;
+  line-height: 1.4;
+/*   border-style: double; */
+/*   border-width: thick; */
+/*   margin-right: 300px; */
+/*   margin-left: 280px; */
+/*   padding: 10px; */
+}
+
+#sidebar-1 {
+  float: right;
+  width: 400px;
+/*   background: pink; */
+  margin-left: 30px; /* margin is the space outside the box */
+  margin-right: 60px;
+  padding: 10px; /* padding is the space inside the box */
+  line-height: 1.4;
+}
+
+ul.poem {
+  list-style-type: none;
+  margin: 2rem;
+  margin-left: 10rem;
+}
+
+.poem li {
+  line-height: 1.9;
+  font-weight: 550;
+  font-size: larger;
+}
+
+#content-3 p {
+  margin-left: 30px;
+  margin-right: 400px;
+}
+
+table {
+  margin-left: 80px;
+}
+
+th {
+  padding-right: 150px;
+  line-height: 1.8;
+}
+
+nav ul li {
+  display: inline;
+}
+
+/* 
+figure { 
+  display: block;
+  position: relative;
+  text-align: bottom;
+} */
+
+/* top-nav --------------------------------------------------------------------------------- */ 
+
+.top-nav {
+  list-style-type: none;
+  margin-bottom: ;
+  padding-bottom: ;
+  line-break: ;
+  float: top;
+}
+
+.top-nav {
+    list-style-type: none;
+    margin: 10;
+    padding: 10;
+    overflow: hidden;
+    background-color: #333;
+}
+
+.top-nav li {
+    float: left;
+    border-right: 1px solid #bbb;
+}
+
+.top-nav li:last-child {
+    border-right: none;
+}
+
+.top-nav li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+/* Change the link color to #111 (black) on hover */
+.top-nav li a:hover {
+    background-color: #111;
+/*     background-color: rgba(255, 0, 0, 0.7); */
+    background-color: #4CAF50;
+}
+
+.top-nav .active {
+  background-color: #504caf;
+/*   background-color: rgba(0, 0, 255, 0.5); */
+}
+
+/* bottom-nav ------------------------------------------------------------------------------ */ 
+
+.bottom-nav {
+  list-style-type: none;
+  margin-bottom: ;
+  padding-bottom: ;
+  line-break: ;
+  float: top;
+}
+
+.bottom-nav {
+    list-style-type: none;
+    margin: 10;
+    padding: 10;
+    overflow: hidden;
+    background-color: #333;
+}
+
+.bottom-nav li {
+    float: left;
+    border-right: 1px solid #bbb;
+}
+
+.bottom-nav li:last-child {
+    border-right: none;
+}
+
+.bottom-nav li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+.bottom-nav li a:hover {
+    background-color: #111;
+/*     background-color: rgba(255, 0, 0, 0.7); */
+    background-color: #4CAF50;
+}
+
+.bottom-nav .active {
+  background-color: #504caf;
+/*   background-color: rgba(0, 0, 255, 0.5); */
+}
